fix: Remove 1px rounding-inaccuracy gap between `IslandBlock` columns

--- a/src/scss/IslandBlock.scss
+++ b/src/scss/IslandBlock.scss
@@ -111,7 +111,8 @@
 	.IslandBlock__content,
 	.IslandBlock__image {
 		box-sizing: content-box;
-		width: cols_pct(5, 5);
+		// NOTE: ".01" part is to prevent rounding errors causing an ugly 1px gap between the columns
+		width: cols_pct(5, 5.01);
 		margin-bottom: between_cols(50, 105);
 		min-height: between_tablet_netbook(280, 400);
 
